Change with keys

--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
         </title>
     </head>
     <body>
-        <h1>Login page</h1>
+        <h1>Login page
+            Exit
+        </h1>
     </body>
 </html>
